--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "author": "Rigo A Pinell",
   "license": "MIT",
   "dependencies": {
-    "inquirer": "^8.0.0",
-    "mysql": "^2.16.0"
+    "console-table": "^0.10.0",
+    "console.table": "^0.10.0",
+    "inquirer": "^8.1.0",
+    "mysql": "^2.18.1"
   }
 }
